--- a/Owais/Project/Main.ipynb
+++ b/Owais/Project/Main.ipynb
@@ -302,7 +302,7 @@
      "text": [
       "<>:10: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
       "<>:10: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
-      "C:\\Users\\Aleem\\AppData\\Local\\Temp\\ipykernel_15092\\1824846553.py:10: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
+      "C:\\Users\\Owais\\AppData\\Local\\Temp\\ipykernel_15092\\1824846553.py:10: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
       "  cData = cData[feature].map(lambda x: str(x)[:count] if len(str(x)[:count]) is not 0 else 0 ).astype(int)\n"
      ]
     }
